--- a/TP.ipynb
+++ b/TP.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Réseau d'accès radio TP\n",
-    "Lucas Hocquette"
+    "Lucas Hocquette - Quentin Goulas"
    ]
   },
   {
