--- a/TP.ipynb
+++ b/TP.ipynb
@@ -102,20 +102,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.         1.         1.         0.985      0.996      0.99666667\n",
+      " 0.99428571 0.995      0.98777778 0.995      0.98636364 0.99083333\n",
+      " 0.99076923 0.99214286 0.98133333 0.991875   0.98176471 0.99611111\n",
+      " 0.97684211 0.972      0.9752381  0.975      0.97130435 0.96666667\n",
+      " 0.9648     0.95807692 0.96888889 0.97321429 0.95862069 0.95166667\n",
+      " 0.96806452 0.9746875  0.96545455 0.94058824 0.93685714 0.94194444\n",
+      " 0.9172973  0.94552632 0.89769231 0.924      0.91170732 0.93071429\n",
+      " 0.90581395 0.89068182 0.86644444 0.85630435 0.86404255 0.84833333\n",
+      " 0.86387755 0.86       0.85607843 0.74480769 0.72264151 0.73555556\n",
+      " 0.68509091 0.71285714 0.55385965 0.49982759 0.42186441 0.3205\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.        ]\n",
+      "The maximum number of users on the network is 42\n"
+     ]
+    }
+   ],
    "source": [
     "# 5\n",
     "\n",
-    "K_values = [10,20,30,40,50,60,70,80,90,100]\n",
-    "deltas = np.zeros_like(K_values)\n",
+    "K_values = np.array(range(1,100))\n",
+    "deltas = np.zeros(len(K_values))\n",
     "\n",
     "for i,K in enumerate(K_values) :\n",
     "    ach_rat = measure_achievement_ratio(K,32*1e3,10**(7/10),100)\n",
     "    deltas[i] = np.mean(ach_rat)\n",
     "\n",
-    "print(f'The maximum number of users on the network is {np.sum(deltas>0.9)}')"
+    "print(deltas)\n",
+    "print(f'The maximum number of users on the network is {np.sum(deltas>=0.9)}')"
    ]
   },
   {
@@ -676,6 +702,71 @@
    "metadata": {},
    "source": [
     "### Exercice 3 : Comparison between CDMA and TDMA systems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.98       0.96       0.92666667 0.8475     0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.        ]\n",
+      "The maximum number of users on the network is 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\n",
+    "\n",
+    "r = 1\n",
+    "W = 3.84*10**6\n",
+    "theta = 0.4\n",
+    "sigma2 = 10**(-104/10)*1e-3\n",
+    "P = 10**(40/10)*1e-3\n",
+    "\n",
+    "def measure_achievement_ratio(K,R,gamma,n_avg=1):\n",
+    "    x,y = sample_users(K,r)\n",
+    "    d = np.sqrt(x**2+y**2)\n",
+    "    L = -128.1 - 37.6*np.log10(d)\n",
+    "    l = 10**(L/10)\n",
+    "    history = np.zeros((n_avg,1))\n",
+    "    for i in range(n_avg):\n",
+    "        h = np.random.exponential(0.5,K)\n",
+    "        g = l*h\n",
+    "        p = P/K\n",
+    "        SINR = W/R*p*g/(theta*(K-1)*p*g+sigma2)\n",
+    "        history[i] = np.mean(SINR>=gamma)\n",
+    "\n",
+    "    return history\n",
+    "\n",
+    "K_values = np.array(range(1,100))\n",
+    "deltas = np.zeros(len(K_values))\n",
+    "\n",
+    "for i,K in enumerate(K_values) :\n",
+    "    ach_rat = measure_achievement_ratio(K,240*1e3,10**(10/10),100)\n",
+    "    deltas[i] = np.mean(ach_rat)\n",
+    "\n",
+    "# print(deltas)\n",
+    "print(f'The maximum number of users on the network is {np.sum(deltas>=0.9)}')"
    ]
   }
  ],
